Fix MSIE 8 popup menu z-index issue

--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -459,6 +459,9 @@ h1 a { outline: none; }
 #top {
     background-color: $color.background;
     padding: 4px;
+    /* The rules below fix MSIE 8 popup menu z-index */
+    position: relative;
+    z-index: 2;
 }
 
 #site-title {
